ThirdParty/mojoshader/unit_tests/preprocessor/errors/undef-line.correct
preprocessor/errors/undef-line:2: ERROR: undefining "__LINE__"
